--- a/game.html
+++ b/game.html
@@ -17,6 +17,8 @@
       position: absolute;
       left:0px;
       top:0px;
+      -webkit-border-radius: 5px;
+      -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 60px rgba(0, 0, 0, 0.1) inset;
     }
     .front {
       background : red;
@@ -33,6 +35,11 @@
       -webkit-transform: rotateY(180deg);;      
     }
     
+    img {
+      max-height: 50px;
+      max-width: 50px;
+    }
+
   </style>
 
 <script type="text/javascript">
