--- a/game.html
+++ b/game.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <head>
   <style type="text/css">
+  
+    body {
+      -webkit-tap-highlight-color: rgba(0,0,0,0);
+    }
     .card { 
+      top: 100px;
       width : 50px;
       height : 50px;
       margin : 5px;
@@ -9,7 +14,7 @@
       position: absolute;
       -webkit-transform-style : preserve-3d;
       -webkit-transition : 0.5s;
-      
+      -webkit-transition-property: -webkit-transform;    	
     }
     .front, .back, .hit {
       width : 100%;
@@ -25,10 +30,7 @@
     .back {
       -webkit-transform: rotateY(180deg);    
     }
-    .flip {
-      -webkit-transform: rotateY(180deg);;      
-    }
-    .flip-back {
+    .flip, .flip-back {
       -webkit-transform: rotateY(180deg);;      
     }
     
@@ -68,7 +70,7 @@
         card.setAttribute("cardid", map[i][j]);
         card.className = "card";
         card.style.left = (i * 70) + "px";
-        card.style.top = (j * 70) + "px";
+        card.style.top = ((j * 70) + 50) + "px";
         card.onclick = function () {
           if(this.className == "card flip") {
             this.className = "card flipback";
@@ -145,9 +147,14 @@
     draw(map, engine(map));
   }
   </script>
+  
+  <meta name="viewport" content="width=device-width" />
+  
 </head>
 <body onload="main()">
-  <div id="spielbereich"></div>
+OpenMemory  
+<div id="spielbereich"></div>
+By <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a> 
 
 </body>
 </html>
