--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<link rel="stylesheet" href="openmemory.css" media="screen"/>
 </head>
 <body onload="main()">
-OpenMemory  
 <div id="spielbereich"></div>
-By <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a> 
-
+<div class="title"> OpenMemory <br/> by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a></div>
 </body>
 </html>
