cleanup of js and html using a load event closure to encapsulate the game logic

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width">
   <script type="text/javascript" language="javascript" src="openmemory.js"></script>
-	<link rel="stylesheet" href="openmemory.css" media="screen"/>
+  <link rel="stylesheet" href="openmemory.css" media="screen">
 </head>
-<body onload="main()">
-<div id="spielbereich"></div>
-<div class="title"> OpenMemory <br/> by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a></div>
+<body>
+  <div id="playground"></div>
+  <div class="title">
+    OpenMemory<br>by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a>
+  </div>
 </body>
 </html>
