removed fixed pixels from js

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="memorize.css" media="screen">
 </head>
 <body>
+    <h1 class="title">Memorize</h1>
     <div id="playground"></div>
-    <div class="title">
-        OpenMemory<br>by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a>
-    </div>
+    <div class="title subtitle">by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a></div>
 </body>
 </html>
