enhanced layout to be cross-platform (and not just webkit-only)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width">
     <script type="text/javascript" language="javascript" src="memorize.js"></script>
     <link rel="stylesheet" href="memorize.css" media="screen">
+    <title>Memorize</title>
 </head>
 <body>
     <h1 class="title">Memorize</h1>
