minor style fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width">
     <script type="text/javascript" language="javascript" src="memorize.js"></script>
     <link rel="stylesheet" href="memorize.css" media="screen">
-    <link rel="apple-touch-icon" href="back.jpg" />
+    <link rel="apple-touch-icon" href="back.jpg">
     <title>Memorize</title>
 </head>
 <body>
