--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta name="viewport" content="width=device-width">
     <script type="text/javascript" language="javascript" src="memorize.js"></script>
     <link rel="stylesheet" href="memorize.css" media="screen">
     <title>Memorize</title>
