Strip-Down for block 2

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <meta name="viewport" content="width=device-width">
     <script type="text/javascript" language="javascript" src="memorize.js"></script>
     <link rel="stylesheet" href="memorize.css" media="screen">
-    <link rel="apple-touch-icon" href="back.jpg">
     <title>Memorize</title>
 </head>
 <body>
-    <h1 class="title">Memorize</h1><div id="timer">0:00</div>
+    <h1 class="title">Memorize</h1>
+    
     <div id="playground"></div>
+    
     <div class="title subtitle">by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a></div>
 </body>
 </html>
