adding meta tags

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <head>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <script type="text/javascript" language="javascript" src="memorize.js"></script>
     <link rel="stylesheet" href="memorize.css" media="screen">
+    <link rel="apple-touch-icon" href="back.jpg">
     <title>Memorize</title>
 </head>
 <body>
     <h1 class="title">Memorize</h1>
-    
+
     <div id="playground"></div>
-    
+
     <div class="title subtitle">by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a></div>
 </body>
 </html>
