checked in branch for block3-start

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Memorize</title>
 </head>
 <body>
-    <h1 class="title">Memorize</h1><div id="timer">0:00</div>
+    <h1 class="title">Memorize</h1>
     <div id="playground"></div>
     <div class="title subtitle">by <a href="http://it-agile.de">it-agile</a> and <a href="http://uxebu.com">uxebu</a></div>
 </body>
